<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ceisutb12.parcialfinal.MainActivity">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="134dp"
        android:layout_marginBottom="153dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"></LinearLayout>

    <LinearLayout
        android:layout_width="291dp"
        android:layout_height="82dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.32">

        <TextView
            android:id="@+id/pantalla"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="textEnd"
            android:textSize="50sp" />
    </LinearLayout>

    <TableLayout
        android:layout_width="370dp"
        android:layout_height="260dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/b7"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="2dp"
                android:layout_marginBottom="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="2dp"
                android:text="@string/siete"
                android:onClick="bb7"/>

            <Button
                android:id="@+id/b8"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="2dp"
                android:layout_marginBottom="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="2dp"
                android:text="@string/ocho"
                android:onClick="bb8" />

            <Button
                android:id="@+id/b9"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="2dp"
                android:layout_marginBottom="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="2dp"
                android:text="@string/nueve"
                android:onClick="bb9" />

            <Button
                android:id="@+id/b_divide"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="2dp"
                android:layout_marginBottom="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="2dp"
                android:text="@string/divi"
                android:onClick="bb_divide" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/b4"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="2dp"
                android:layout_marginBottom="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="2dp"
                android:text="@string/cuatro"
                android:onClick="bb4" />

            <Button
                android:id="@+id/b5"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="2dp"
                android:layout_marginBottom="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="2dp"
                android:text="@string/cinco"
                android:onClick="bb5" />

            <Button
                android:id="@+id/b6"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="2dp"
                android:layout_marginBottom="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="2dp"
                android:text="@string/seis"
                android:onClick="bb6"/>

            <Button
                android:id="@+id/b_multi"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="2dp"
                android:layout_marginBottom="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="2dp"
                android:text="@string/multi"
                android:onClick="bb_multi"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/b1"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="2dp"
                android:layout_marginBottom="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="2dp"
                android:text="@string/uno"
                android:onClick="bb1" />

            <Button
                android:id="@+id/b2"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="2dp"
                android:layout_marginBottom="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="2dp"
                android:text="@string/dos"
                android:onClick="bb2" />

            <Button
                android:id="@+id/b3"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="2dp"
                android:layout_marginBottom="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="2dp"
                android:text="@string/tres"
                android:onClick="bb3" />

            <Button
                android:id="@+id/b_menos"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="2dp"
                android:layout_marginBottom="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="2dp"
                android:text="@string/resta"
                android:onClick="bb_menos" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/b0"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="2dp"
                android:layout_marginBottom="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="2dp"
                android:text="@string/cero"
                android:onClick="bb0" />

            <Button
                android:id="@+id/b_punto"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="2dp"
                android:layout_marginBottom="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="2dp"
                android:text="." />

            <Button
                android:id="@+id/b_igual"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="2dp"
                android:layout_marginBottom="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="2dp"
                android:text="@string/igual"
                android:onClick="ejecutar"/>

            <Button
                android:id="@+id/b_mas"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="2dp"
                android:layout_marginBottom="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="2dp"
                android:text="@string/suma"
                android:onClick="bb_suma" />

        </TableRow>

    </TableLayout>

</android.support.constraint.ConstraintLayout>
